--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "sprint_2",
   "version": "1.0.0",
   "description": "Sprint 1 for SE grp 19",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+   "start" : "nodemon app.js"
   },
   "author": "Jal Dani",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
