change in mail notification

--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ JWT_SECRET="JWT_SCRET"
 
 PORT=3000
 
-EMAIL_USER=jal.dani47114@gmail.com
-EMAIL_PASS=8ebq4t13
+EMAIL_USER=jal.dani47112@gmail.com
+EMAIL_PASS=viiu uyjc bqfh yzex
 
 ADMIN_EMAIL=jal.dani47114@gmail.com
-ADMIN_PASSWORD=8ebq4t13
+ADMIN_PASSWORD=viiu uyjc bqfh yzex
