--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sprint 1 for SE grp 19",
   "main": "app.js",
   "scripts": {
-   "start" : "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "author": "Jal Dani",
   "license": "ISC",
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.16",
     "react-router-dom": "^6.27.0"
   },
